; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IsIPv6Supported.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IsIPv6Supported.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AF_INET6 = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@INVALID_SOCKET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsIPv6Supported() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = load i32, i32* @AF_INET6, align 4
  %4 = load i32, i32* @SOCK_STREAM, align 4
  %5 = call i64 @socket(i32 %3, i32 %4, i32 0)
  store i64 %5, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @INVALID_SOCKET, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %13

10:                                               ; preds = %0
  %11 = load i64, i64* %2, align 8
  %12 = call i32 @closesocket(i64 %11)
  store i32 1, i32* %1, align 4
  br label %13

13:                                               ; preds = %10, %9
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i64 @socket(i32, i32, i32) #1

declare dso_local i32 @closesocket(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
